--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,20 @@
             "Tgu\\Polikarpov\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tgu\\Polikarpov\\PhpUnit\\": "tests/"
+        }
+    },
     "require": {
         "fakerphp/faker": "^1.20",
         "ext-pdo": "*",
         "symfony/polyfill-uuid": "^1.27"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    },
+    "scripts": {
+        "test": "phpunit tests --testdox --colors"
     }
 }
