--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "fakerphp/faker": "^1.20",
         "ext-pdo": "*",
-        "symfony/polyfill-uuid": "^1.27"
+        "symfony/polyfill-uuid": "^1.27",
+        "symfony/http-foundation": "^5.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
