--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "fakerphp/faker": "^1.20",
         "ext-pdo": "*",
         "symfony/polyfill-uuid": "^1.27",
-        "symfony/http-foundation": "^5.4"
+        "symfony/http-foundation": "^5.4",
+        "monolog/monolog": "^2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
